Fixes in the 3rd lab