@@ -8,17 +8,17 @@ import java.util.stream.Collectors;
 public class CatExhibitionAnalyzer {
     public static double calculateGenderRatio(List<CatWinner> winners) {
 
-        if(winners == null){
-            throw new NullPointerException("The list of winners can't be null");
+        if (winners == null) {
+            throw new IllegalArgumentException("The list of winners can't be null");
         }
 
-        for (CatWinner winner: winners){
-            if(winner.getName() == null || winner.getBreed() == null || winner.getGender() == null){
+        for (CatWinner winner : winners) {
+            if (winner.getName() == null || winner.getBreed() == null || winner.getGender() == null) {
                 throw new IllegalArgumentException("Fields in CatWinner can't be null");
             }
         }
 
-        if(winners.isEmpty()){
+        if (winners.isEmpty()) {
             return 0;
         }
 
@@ -30,20 +30,20 @@ public class CatExhibitionAnalyzer {
                 .filter(cat -> cat.getGender() == Gender.FEMALE)
                 .count();
 
-        if( femaleCount == 0 ){
-            return Double.POSITIVE_INFINITY;
+        if (femaleCount == 0) {
+            return Double.POSITIVE_INFINITY;  // Если женщин нет, возвращаем бесконечность
         }
 
-        if(maleCount == 0){
+        if (maleCount == 0) {
             return 0;
         }
 
-        return (double) maleCount/ femaleCount;
+        return (double) maleCount / femaleCount; //соотношение мужчин на женщин, double для дробных значений
     }
 
     public static List<String> calculateBreedStatistics(List<CatWinner> winners) {
         if (winners == null) {
-            throw new NullPointerException("The list of winners can't be null");
+            return new ArrayList<>();
         }
 
         for (CatWinner winner : winners) {
@@ -56,7 +56,7 @@ public class CatExhibitionAnalyzer {
         List<Breed> breeds = winners.stream()
                 .map(CatWinner::getBreed)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         for (Breed breed : breeds) {
             long count = winners.stream()
@@ -70,7 +70,7 @@ public class CatExhibitionAnalyzer {
 
     public static Set<String> getUniqueFemaleWinners(List<CatWinner> winners) {
         if (winners == null) {
-            throw new NullPointerException("The list of winners can't be null");
+            throw new IllegalArgumentException("The list of winners can't be null");
         }
 
         for (CatWinner winner : winners) {
